--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Aishwarya Mellalakari
-#logo: /assets/img/headshot_circle.png
+#logo: /asset/Photo.jpeg
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
