--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Aishwarya Mellalakari
-#logo: /asset/Photo.jpeg
+logo: asset/Profile.jpg
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
